app/styles/style.default.css
/* ... */
.mobile-scroll{ overflow-x: hidden;}

.banner-section {
  margin-bottom: 30px;
  border-bottom: 1px solid #eee;
  padding: 0 0 20px 0;
}

.pagination-default {
  float: right;
}

.coming-soon-wrapper {
  width: 93%;
  position: fixed;
  top: 30%;
  z-index: 999;
}

.default-error {
  position: relative;
  text-align: right;
  right: 115px;
  top: 5px;
  color: #a94442;
}

.coming-soon {
  margin-top: 0;
  position: relative;
  top: 20%;
  z-index: 9999;
}

.select {
  position: absolute;
  z-index: 9;
  top: 12px;
  right: 6px;
}

.custom-select {
  position: absolute;
  z-index: 9;
  top: 37px;
  right: 20px;
}

.navbar-header {
  position: relative;
}

select {
  -webkit-appearance: none;
}

.content-opacity{
  opacity: 0.1;
}

.no-radius {
  border-radius: 0;
}

#nav a.highlite {
  background-color: #ffd803;
  display: block;
}

.no-arrow:before {
    content: '';
    border: 0;
}

.error-padding {
  position: relative;
  z-index: 99;
}

.fileUpload {
  margin-bottom: 0.5%;
  position: relative;
  overflow: hidden;
}

.upload {
  cursor: pointer;
  filter: alpha(opacity=0);
  font-size: 26px;
  margin: 0;
  opacity: 0;
  padding: 0;
  position: absolute;
  left: 0;
  top: 0;
}

.error-abs {
  position: absolute !important;
  width: 250px;
}

.userid::-webkit-input-placeholder {
    color: #A9A9A9;
}

.userid:-moz-placeholder {
    color: #A9A9A9;
}

.userid::-moz-placeholder {
    color: #A9A9A9;
}

.userid:-ms-input-placeholder {
    color: #A9A9A9;
}

.mail-box-steps {
  max-height: 750px;
}

.custom-breadcrumb {
  margin: -2px 0 0 0 !important;
  font-size: 28px !important;
  font-weight: 500;
  color: #2f363d !important;
  line-height: normal !important;
}

.media>.pull-left {
    margin-right: 10px;
}

.verifyemail-body {
  padding: 80px 40px !important;
}

.error-padding {
  padding: 5px 10px;
}

.verifyemail-body h4, .verifyemail-body h5 {
  font-weight: 400;
}

.step4 {
  float: left;
  width: 500px;
}

.step5 {
  position: relative;
  top: -100px;
  width: 500px;
}

.coming-soon {
  font-family: 'Roboto';
  font-weight: 300;
  font-size: 21px;
}

.full-width{
  width:100%;
}

.forgot-password {
  display: table;
  margin: 30px auto 0;
  float: none;
}

.forgot-text {
  display: table;
  float: none;
  margin: 0 auto;
}

.dashboard {
  background: url('../images/dahsboard.jpg') no-repeat;
  background-size: 100%;
}

.headerwrapper:after {
    clear: both;
    display: block;
    content: '';
}


/***** 3.1 HEADER LEFT *****/

.headerwrapper .header-left {
    width: 100px;
    min-height: 60px;
    padding: 14px 15px;
    float: left;
    border-right: 1px solid rgba(255,255,255,0.14);
    background-color: rgba(0,0,0,0.03);
    position: relative;
}
.sm-font-dash{ font-size:34px !important;}
.headerwrapper .header-left .logo {
    display: inline-block;
    margin-top: 5px;
    float: left;
}

.headerwrapper .header-left .menu-collapse {
    -moz-transition: all 0.2s ease-out 0s;
    -webkit-transition: all 0.2s ease-out 0s;
    transition: all 0.2s ease-out 0s;
    border: 1px solid rgba(255,255,255,0.3);
    color: rgba(255,255,255,0.8);
    padding: 6px 9px;
    -moz-border-radius: 50px;
    -webkit-border-radius: 50px;
    border-radius: 50px;
    display: inline-block;
    font-size: 16px;
    line-height: normal;
    position: absolute;
    top: 13px;
    right: 15px;
}

.headerwrapper .header-left .menu-collapse:hover {
    border-color: #fff;
    color: #fff;
}


/***** 3.2 HEADER RIGHT *****/

.headerwrapper .header-right {
    margin-left: 100px;
    min-height: 60px;
    padding: 14px 15px;
}

.headerwrapper .header-right .btn-group {
    margin: 0;
    line-height: 21px;
    float: left;
}

.headerwrapper .header-right .btn-group > .btn {
    border: 0;
    background-color: rgba(0,0,0,0.1);
    color: rgba(255,255,255,0.75);
    -moz-border-radius: 50px;
    -webkit-border-radius: 50px;
    border-radius: 50px;
    line-height: normal;
    margin-left: 5px;
    height: 33px;
}

.headerwrapper .header-right .btn-group > .btn:hover {
    background-color: rgba(0,0,0,0.2);
}

.headerwrapper .header-right .btn-group > .btn:focus,
.headerwrapper .header-right .btn-group > .btn:active {
    color: #fff;
    background-color: rgba(0,0,0,0.3);
    -moz-box-shadow: none;
    -webkit-box-shadow: none;
    box-shadow: none;
}

.headerwrapper .header-right .btn-group .btn .badge {
    -moz-box-shadow: none;
    -webkit-box-shadow: none;
    box-shadow: none;
    background-color: #fff;
    color: #000;
    margin-left: 2px;
    padding: 2px 6px;
}

.btn-group-notification > .btn {
    padding: 7px 10px;
}

.btn-group-messages > .btn {
    padding: 6px 9px 8px 9px;
}

.btn-group-option > .btn {
    padding: 7px 12px;
}

.headerwrapper .header-right .btn-group .dropdown-menu {
    -moz-box-shadow: 3px 3px 0 rgba(0,0,0,0.05);
    -webkit-box-shadow: 3px 3px 0 rgba(0,0,0,0.05);
    box-shadow: 3px 3px 2px rgba(0,0,0,0.05);
    margin-top: 13px;
    border-top: 0;
    -moz-border-radius: 0 0 3px 3px;
    -webkit-border-radius: 0 0 3px 3px;
    border-radius: 0 0 3px 3px;
    border-color: #ccc;
}

.headerwrapper .header-right .btn-group .dropdown-menu:after {
    border-bottom: 6px solid #fff;
    border-left: 6px solid rgba(0,0,0,0);
    border-right: 6px solid rgba(0,0,0,0);
    content: '';
    display: inline-block;
    position: absolute;
    top: -6px;
    right: 10px;
}

.headerwrapper .header-right .btn-group .dropdown-menu li {
    position: relative;
}

.headerwrapper .header-right .btn-group .dropdown-menu li a {
    font-size: 12px;
    padding: 8px 15px;
    color: #555;
    -moz-transition: all 0.2s ease-out 0s;
    -webkit-transition: all 0.2s ease-out 0s;
    transition: all 0.2s ease-out 0s;
}

.headerwrapper .header-right .btn-group .dropdown-menu li a:hover {
    color: #333;
    background-color: #E4E7EA;
}

.headerwrapper .header-right .btn-group .dropdown-menu .divider {
    margin: 5px 0;
}
/* ... */

